Tue Apr  1 21:05:16 UTC 2008  Mike Martinez  <martinez_m@ociweb.com>
        Merging trunk changes 999:1046 out to branch.

        Mon Mar 31 18:12:38 UTC 2008  Brian Johnson  <johnsonb@ociweb.com>

        * tests/DCPS/CompatibilityTest/CompatibilityTest.mpc:
        * tests/DCPS/CompatibilityTest/common.h:
        * tests/DCPS/CompatibilityTest/publisher.cpp:
        * tests/DCPS/CompatibilityTest/subscriber.cpp:

          Cleaning up unneeded dependency on UDP.

        * tests/DCPS/LivelinessTimeout/LivelinessTimeout.mpc:
        * tests/DCPS/LivelinessTimeout/common.h:
        * tests/DCPS/LivelinessTimeout/publisher.cpp:
        * tests/DCPS/LivelinessTimeout/subscriber.cpp:

          Cleaning up unneeded dependency on UDP.

        Mon Mar 31 15:59:22 UTC 2008  Adam Mitz  <mitza@ociweb.com>

        * AUTHORS:

          Added Brian Johnson of OCI.

        * DDS_TAO.mwc:

          Updated to work with recent changes to the DCPSInfoRepo -- it now uses
          the TAO ImR (optionally).  Thanks to Jonathan Pollack for reporting
          this problem.

        Mon Mar 31 15:44:17 UTC 2008  Brian Johnson  <johnsonb@ociweb.com>

        * tests/DCPS/CompatibilityTest/CompatibilityTest.mpc:
        * tests/DCPS/CompatibilityTest/common.h:
        * tests/DCPS/CompatibilityTest/common.cpp:

          Cleanup quick mistake and remove a warning.

        Mon Mar 31 14:51:48 UTC 2008  Brian Johnson  <johnsonb@ociweb.com>

        * tests/DCPS/CompatibilityTest/CompatibilityTest.mpc:

          Fixing problem with static builds.

        Fri Mar 28 14:07:13 UTC 2008  Brian Johnson  <johnsonb@ociweb.com>

        * tests/DCPS/CompatibilityTest/README:
        * tests/DCPS/UnitTests/README:

          Change from .txt.

        * tests/DCPS/CompatibilityTest/README.txt:

        * tests/DCPS/UnitTests/README.txt:

          Removed these files.

        Fri Mar 28 14:02:55 UTC 2008  Brian Johnson  <johnsonb@ociweb.com>
